# holter

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.yaml  README.md  pyproject.toml
docs/: data-layer-architecture.md  front-end.md  hodos-foundations.md
docs/sessions/: 2026-05-17-evening.md  2026-05-17.md  2026-05-18.md  2026-05-19.md
docs/sessions/2026-05-17-templates-preview/lighthouse/: report.html
holter/api/: __init__.py  app.py
holter/app/: main.py
holter/preview/: _shared.py  canvas.py  mlops.css  render_holter.py  render_home.py  render_mil_briefing.py  render_mlops.py
pulse/contracts/: bank_policy.yaml  validate_bank_policy.py
pulse/decision_packs/cards_credit_apply_eligibility__abandon_before_submit/: hypothesis.yaml
pulse/decision_packs/cards_credit_apply_eligibility__dwell_after_error/: hypothesis.yaml
pulse/decision_packs/cards_credit_apply_eligibility__multi_back_press/: hypothesis.yaml
pulse/decision_packs/international_beneficiary_setup__abandon_before_submit/: hypothesis.yaml
pulse/decision_packs/international_beneficiary_setup__dwell_after_error/: hypothesis.yaml
pulse/decision_packs/international_beneficiary_setup__multi_back_press/: hypothesis.yaml
pulse/decision_packs/investments_premier_portfolio_overview__abandon_before_submit/: hypothesis.yaml
pulse/decision_packs/investments_premier_portfolio_overview__dwell_after_error/: hypothesis.yaml
pulse/decision_packs/investments_premier_portfolio_overview__multi_back_press/: hypothesis.yaml
pulse/decision_packs/loans_apply_step3__abandon_before_submit/: hypothesis.yaml
pulse/decision_packs/loans_apply_step3__dwell_after_error/: hypothesis.yaml
pulse/decision_packs/loans_apply_step3__multi_back_press/: hypothesis.yaml
pulse/detection/: detect.py  methods.py
pulse/risk/: __init__.py
pulse/scenarios/agentic_ai_placement/: scenario.yaml
pulse/tests/: test_agentic_ai_placement.py  test_bank_policy_validate.py  test_decision_pack_hypothesis.py  test_detection.py  test_friction_api.py  test_render_mil_briefing_placement.py  test_value_score.py
pulse/value/: RUBRIC.md  VALUE_DESIGN.md  score.py  value_methodology.yaml
