[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulse"
version = "0.1.0"
description = "CJI Pulse — almost-real-time decision intelligence for customer journey friction. Codename: Holter."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "CJI" }]
keywords = ["decision-intelligence", "customer-journey", "friction-detection", "regtech"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.urls]
Homepage = "https://cjipro.com/pulse"
Repository = "https://github.com/cjipro/holter"
Documentation = "https://cjipro.com/pulse/docs"
Issues = "https://cjipro.atlassian.net/projects/PULSE"

[tool.setuptools.packages.find]
where = ["."]
include = ["pulse*"]
exclude = ["pulse.tests*"]

[tool.pytest.ini_options]
testpaths = ["pulse/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"
