[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulse"
version = "0.1.0"
description = "CJI Pulse — almost-real-time decision intelligence for customer journey friction. Codename: Holter."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "CJI" }]
keywords = ["decision-intelligence", "customer-journey", "friction-detection", "regtech"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# UI extra — pulls in the Holter surfaces. Engine-only buyers can skip this.
# Versions match bank-env APPROVED_LIBRARIES.md (Panel 1.4.4, HoloViews 1.19.1,
# Streamlit 1.46.0, FastAPI 0.136.1, Pydantic 2.13.4).
# Note: uvicorn deliberately not pinned here — sits in the APPROVED_LIBRARIES.md
# t-z gap pending bank-env confirmation. Document as a runtime dep in HOL-5
# run instructions until confirmed.
ui = [
    "panel>=1.4,<2",
    "holoviews>=1.19,<2",
    "streamlit>=1.46,<2",
    "fastapi>=0.136,<1",
    "pydantic>=2.13,<3",
]
test = ["pytest>=8.0"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.urls]
Homepage = "https://cjipro.com/pulse"
Repository = "https://github.com/cjipro/holter"
Documentation = "https://cjipro.com/pulse/docs"
Issues = "https://cjipro.atlassian.net/projects/PULSE"

[tool.setuptools.packages.find]
where = ["."]
include = ["pulse*", "holter*"]
exclude = ["pulse.tests*"]

[tool.pytest.ini_options]
testpaths = ["pulse/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"
